Improve filter logic